--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <div class="cringe-message">Happy Birthday Anish!</div>
+    <div class="cringe-message">Happy Birthday <span style="text-decoration: line-through;">Anish</span> Soumojay!</div>
     <div class="sparkles"></div>
     <script>
         const sparklesContainer = document.querySelector('.sparkles');
