--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <div class="cringe-message">Consider Applying</div>
+    <div class="cringe-message">30 Min?</div>
     <div class="sparkles"></div>
     <script>
         const sparklesContainer = document.querySelector('.sparkles');
