--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-    <img src="https://github.com/snehshahh/happy-bday/blob/main/image_41.png" />
+    <img src="https://snehshahh.github.io/happy-bday/image_41.png" />
     <div class="cringe-message">30 Min?</div>
     <div class="sparkles"></div>
     <script>
