--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <img src="image_41.png" alt="30 Min" class="rotating-img" />
-    <div class="cringe-message">30 Min?</div>
+    <div class="cringe-message" style="margin-top:250px;">30 Min?</div>
     <div class="sparkles"></div>
     <script>
         const sparklesContainer = document.querySelector('.sparkles');
